workshop04/m-config.yaml
---
apiVersion: v1
kind: Namespace
metadata: 
  name: mns
  labels:
    app: m
    name: mns
