workshop04/m-sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: m-hsvc
  namespace: mns
  labels:
    app: m
    name: m-hsvc
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: m
    name: m-po
  ports:
  - name: m-s-data
    port: 9000
    targetPort: 9000
  - name: m-s-console
    port: 9090
    targetPort: 9090

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: m-sts
  namespace: mns
spec:
  replicas: 4
  serviceName: m-hsvc
  selector:
    matchLabels:
      app: m
      name: m-po
  volumeClaimTemplates:
  - metadata:
      name: data-vol
    spec:
      accessModes:
      - "ReadWriteOnce"
      resources:
        requests:
          storage: 1Gi
      storageClassName: do-block-storage

  template:
    metadata:
      labels:
        app: m
        name: m-po
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: m-container
        image: bitnami/minio:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: data
          containerPort: 9000
        - name: console
          containerPort: 9090
        volumeMounts:
        - name: data-vol
          mountPath: /data
        resources:
          requests:
            cpu: "200m"
            memory: "250Mi"
