workshop04/m-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mdata-ing
  namespace: mns
  labels:
    app: m
    name: mdata-ing
spec:
  ingressClassName: nginx
  rules:
  - host: data.146.190.195.231.nip.io
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: m-hsvc
            port:
              number: 9000
  - host: console.146.190.195.231.nip.io
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: m-hsvc
            port:
              number: 9090
